--- a/practice_questions/Pract_questions_Functions.ipynb
+++ b/practice_questions/Pract_questions_Functions.ipynb
@@ -32,6 +32,108 @@
   },
   {
    "cell_type": "markdown",
+   "id": "804de00b-c428-4aed-875c-a799095775c8",
+   "metadata": {},
+   "source": [
+    "##  1) Write a function to sum all the items in a list\n",
+    "l = [5,6,7,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "40d9eec3-6539-4441-948c-38bd3e17dbb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- 5\n",
+      "--- 11\n",
+      "--- 18\n",
+      "--- 20\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [5, 6, 7, 2]\n",
+    "\n",
+    "#STEP1: Check if logic works without using function TODO\n",
+    "sum = 0\n",
+    "for i in numbers:\n",
+    "    sum = sum + i\n",
+    "    print(\"---\",sum)\n",
+    "\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afc69cd8-0bcd-4073-b1c5-95ce63979d30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# STEP2: If logic worked, then put the logic inside the function\n",
+    "\n",
+    "def sum(numbers): \n",
+    "    sum = 0\n",
+    "    for i in numbers:\n",
+    "        sum = sum + i\n",
+    "    return sum\n",
+    "\n",
+    "res = sum(numbers)\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed488d20-58dd-4d91-9640-37f0422db90c",
+   "metadata": {},
+   "source": [
+    "## 1.1) Write a function to multiply all the items in a list.\n",
+    "numbers = [4,7,3,5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "df400a67-70c4-413a-b3e7-8fb9a59a903c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-84\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [4,7,3,-1]\n",
+    "\n",
+    "def sum(numbers): \n",
+    "    sum = 1\n",
+    "    for i in numbers:\n",
+    "        sum = sum * i # sum *=i\n",
+    "    return sum\n",
+    "\n",
+    "res = sum(numbers)\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3711e354-d06e-47bd-a5fe-2d22eb4f3f6b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "bd548bab",
    "metadata": {
     "id": "bd548bab"
@@ -62,8 +164,7 @@
    ],
    "source": [
     "def addTwo(a,b):\n",
-    "    c = a+b\n",
-    "\n",
+    "    c = a + b\n",
     "    return c\n",
     "\n",
     "addTwo(4,5)"
@@ -115,6 +216,154 @@
    ],
    "source": [
     "addTwo(10,4.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47421ab7-1dcf-49ce-b6fc-4440095d0b7b",
+   "metadata": {},
+   "source": [
+    "## 3. Write a Python function program to get the largest number from a list\n",
+    " numbers = [7, 2, 9, 11]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a329059e-c159-443e-9f3a-bcb47d977d10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "# method1: use any in built function \n",
+    "numbers = [7, 2, 9, 11]\n",
+    "print(max(numbers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8239d406-beec-4c42-948a-3148c8c4663b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "# method2: Do NOT use any in built function. Use for loop\n",
+    "numbers = [7, 2, 9, 11]\n",
+    "\n",
+    "max = numbers[0]\n",
+    "for i in numbers:\n",
+    "    if i > max:\n",
+    "        max = i\n",
+    "\n",
+    "print(max)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "82ea1b7e-02e8-4988-88e8-a9bb67487ac7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now we convert above into a function:\n",
+    "def max(numbers):\n",
+    "    max = numbers[0]\n",
+    "    for i in numbers:\n",
+    "        if i > max:\n",
+    "            max = i\n",
+    "    \n",
+    "    return max\n",
+    "\n",
+    "n = [7, 2, 9, 11]\n",
+    "res = max(n)\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94061599-9104-41c9-b212-abd4a17507b6",
+   "metadata": {},
+   "source": [
+    "## 3.1) Write a Python fucntion program to count the number of strings where the string length is 2 or more \n",
+    "l_string = ['abc', 'xyz', 'a', '1221']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c4443110-7563-472f-af6c-eda85d1afb75",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "l_string = ['abc', 'xyz', 'a', '1221']\n",
+    "\n",
+    "#STEP1: Write the code without using function\n",
+    "count = 0\n",
+    "for i in l_string:\n",
+    "    if len(i) >=2:\n",
+    "        count += 1\n",
+    "\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "68d5abdc-d561-4255-99bb-99577fb7c324",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#STEP2: Rewrite above code using function\n",
+    "\n",
+    "def count_str(l_string):\n",
+    "    count = 0\n",
+    "    for i in l_string:\n",
+    "        if len(i) >=2:\n",
+    "            count += 1\n",
+    "    return count\n",
+    "\n",
+    "l_string = ['abc', 'xyz', 'a', '1221']\n",
+    "res = count_str(l_string)\n",
+    "print(res)"
    ]
   },
   {
@@ -1223,7 +1472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
