--- a/practice_questions/Pract_questions_Strings_List_For_If-Else_While.ipynb
+++ b/practice_questions/Pract_questions_Strings_List_For_If-Else_While.ipynb
@@ -13,89 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "507357c7",
-   "metadata": {
-    "id": "507357c7",
-    "outputId": "bc1fcdd1-889c-459f-ba65-dddcf0f2e58b"
-   },
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "enter a string:  what a day and night\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'what a day and night'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A=input(\"enter a string: \")\n",
-    "A"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
-   "id": "52d85387",
-   "metadata": {
-    "id": "52d85387",
-    "outputId": "057438ed-3d1e-4eb2-ffaf-1e1227a4cfd7"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['what', 'a', 'day', 'and', 'night']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "B=A.split()\n",
-    "B"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "ac9a75c4",
-   "metadata": {
-    "id": "ac9a75c4",
-    "outputId": "5617352e-ee38-4713-e4ba-d5989cd10bdb"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['night', 'and', 'day', 'a', 'what']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "C=B[::-1]\n",
-    "C"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "e4106845",
    "metadata": {
     "id": "e4106845",
@@ -103,19 +21,36 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'night and day a what'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "split_res:   ['what', 'a', 'day', 'and', 'night']\n",
+      "reverse_res: ['night', 'and', 'day', 'a', 'what']\n",
+      "-- night \n",
+      "-- night and \n",
+      "-- night and day \n",
+      "-- night and day a \n",
+      "-- night and day a what \n",
+      "final: night and day a what \n"
+     ]
     }
    ],
    "source": [
-    "D=' '.join(C)\n",
-    "D"
+    "s = \"what a day and night\"\n",
+    "\n",
+    "# code that produces output: night and day a what\n",
+    "split_res = s.split(\" \")\n",
+    "print(f\"split_res:   {split_res}\")\n",
+    "\n",
+    "reverse_res = split_res[::-1]\n",
+    "print(f\"reverse_res: {reverse_res}\")\n",
+    "\n",
+    "final = \"\"\n",
+    "for i in reverse_res:\n",
+    "    final = final + i + \" \"\n",
+    "    print(f\"-- {final}\")\n",
+    "\n",
+    "print(f\"final: {final}\")"
    ]
   },
   {
@@ -125,12 +60,12 @@
     "id": "2af93eb8"
    },
    "source": [
-    "### 2) Fetch only \"there is a story\" from \"Within everyone there is a story. Just listen\""
+    "### 2) Find if the string \"everyone\" is inside \"Within everyone there is a story. Just listen\". Then tell me its index. Print it using slicing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "b76aa635",
    "metadata": {
     "id": "b76aa635",
@@ -138,44 +73,32 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Within everyone there is a story. Just listen'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "found\n",
+      "7\n",
+      "7\n",
+      "everyone\n"
+     ]
     }
    ],
    "source": [
-    "S=\"Within everyone there is a story. Just listen\"\n",
-    "S"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "09381313",
-   "metadata": {
-    "id": "09381313",
-    "outputId": "83feb234-31e4-4746-ee34-b9cd8a26870d"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'there is a story'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s=S[16:32:1]\n",
-    "s"
+    "sentence = \"Within everyone there is a story. Just listen\"\n",
+    "srch = \"everyone\"\n",
+    "\n",
+    "# 1: First find if the srch string is in sentence.\n",
+    "if srch in sentence:\n",
+    "    print(\"found\")\n",
+    "else:\n",
+    "    print(\"Not found\")\n",
+    "\n",
+    "# 2\n",
+    "print(sentence.find(\"everyone\"))\n",
+    "print(sentence.index(srch))\n",
+    "\n",
+    "# 3\n",
+    "print(sentence[7:15])"
    ]
   },
   {
@@ -190,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f346fe2b",
    "metadata": {
     "id": "f346fe2b",
@@ -207,11 +130,11 @@
     }
    ],
    "source": [
-    "S=\"mAKe it in uppercase\"\n",
-    "U=S.upper()\n",
-    "L=U.lower()\n",
-    "print(U)\n",
-    "print(L)"
+    "s = \"mAKe it in uppercase\"\n",
+    "u = s.upper()\n",
+    "l = s.lower()\n",
+    "print(u)\n",
+    "print(l)"
    ]
   },
   {
@@ -257,12 +180,15 @@
     "id": "b94e8621"
    },
    "source": [
-    "# 5)Write a prog. to generate Acronym"
+    "### 5.1) Write a prog. to generate Acronym (using all words)\n",
+    "sentence = \"State Bank Of India\"\n",
+    "\n",
+    "acronym = SBOI"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "fe1f8b43",
    "metadata": {
     "id": "fe1f8b43",
@@ -273,18 +199,172 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a phrase: state bank of india\n",
+      "['State', 'Bank', 'Of', 'India']\n",
+      "SBOI"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = \"State Bank Of India\"\n",
+    "\n",
+    "split_sent = sentence.split(\" \")\n",
+    "print(split_sent)\n",
+    "\n",
+    "for i in split_sent:\n",
+    "    print(i[0], end=\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5679f921-ba9a-444a-a3d9-6e6eef2ce800",
+   "metadata": {},
+   "source": [
+    "## 5.2) Write a prog. to generate Acronym (using only keywords)\n",
+    "sentence = \"State Bank Of India\"\n",
+    "\n",
+    "acronym = SBI\n",
+    "\n",
+    "words that should not be part = Of, the, in,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "198111d5-6bc4-455d-8837-743ea8fb9741",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentence = \"State Bank Of India\"\n",
+    "exclude = ['Of','the','in']\n",
+    "\n",
+    "split_sent = sentence.split(\" \")\n",
+    "print(split_sent)\n",
+    "\n",
+    "for i in split_sent:\n",
+    "    if i not in exclude:\n",
+    "        print(i[0], end=\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cc49c9a-6fc3-4e4e-b8db-2cf364543943",
+   "metadata": {},
+   "source": [
+    "## 5.3)Write a prog. to generate Acronym (using only keywords and this the exclude list can be upper or lower case)\n",
+    "sentence = \"State Bank Of India\"\n",
+    "\n",
+    "acronym = SBI\n",
+    "\n",
+    "words that should not be part = of, the, in,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4259d00b-950a-49c5-b402-44ecad15ac1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['state', 'bank', 'of', 'india']\n",
       "SBI"
      ]
     }
    ],
    "source": [
-    "User_Input=input(\"Enter a phrase: \")\n",
-    "Modified_Input=(User_Input.replace('of',''))\n",
-    "Final_text=Modified_Input.split()\n",
-    "for i in Final_text:\n",
-    "    print(i[0].upper(),end=\"\")"
+    "sentence = \"State Bank Of India\"\n",
+    "exclude = ['of','the','in', 'Of'] # NOTE: Its all lowercase\n",
+    "\n",
+    "sentence = sentence.lower()\n",
+    "split_sent = sentence.split(\" \")\n",
+    "print(split_sent)\n",
+    "\n",
+    "for i in split_sent:\n",
+    "    if i not in exclude:\n",
+    "        print(i[0].upper(), end=\"\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e904167-b2fb-4494-914b-4ef45f1d0703",
+   "metadata": {},
+   "source": [
+    "## 5.4) Write a prog. to generate Acronym (using only keywords and this the exclude list can be upper or lower case) and it prompts the user for input\n",
+    "user input: sentence = \"State Bank Of India\"\n",
+    "\n",
+    "acronym = SBI\n",
+    "\n",
+    "words that should not be part = of, the, in,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e26012b8-5a4c-44de-800a-22c3c72ba97b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your sentence: fder erg\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['fder', 'erg']\n",
+      "FE"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = input(\"Enter your sentence:\")\n",
+    "exclude = ['of','the','in', 'Of'] # NOTE: Its all lowercase\n",
+    "\n",
+    "sentence = sentence.lower()\n",
+    "split_sent = sentence.split(\" \")\n",
+    "print(split_sent)\n",
+    "\n",
+    "for i in split_sent:\n",
+    "    if i not in exclude:\n",
+    "        print(i[0].upper(), end=\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ad89059-9d4f-4869-89e0-917cea663307",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd16490d-fc20-4642-b07b-e404a7355226",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de0e611b-0338-43e4-a354-06fceae20ca0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b696384e-4412-41b8-8210-02e9b90d9222",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -321,6 +401,106 @@
     "    count=count+1\n",
     "print (count)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e163687-e99f-46b5-a0ed-017fd357686e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76c64383-779f-467e-a137-47010c41530c",
+   "metadata": {},
+   "source": [
+    "## 6.2 ) Write a program to find the the count of 'r', 'g' present in the string \"peregrine and nomadic\". Use only for loop and if condition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "95702089-dd48-4b63-aa27-e0b6183508d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = \"peregrine and nomadic\"\n",
+    "\n",
+    "# sub_str = \"rg\" # This works too\n",
+    "sub_str = ['r','g']\n",
+    "\n",
+    "count = 0\n",
+    "for i in sentence:\n",
+    "    if i in sub_str:\n",
+    "        count = count + 1\n",
+    "\n",
+    "print(count)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26db4fd4-eb3a-42e3-953b-76fd50c05b94",
+   "metadata": {},
+   "source": [
+    "## 6.3) Write a program to replace 'r' with 'R' present in the string \"peregrine\". Use only for loop and if condition¶"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0c415d08-564b-4236-94d4-0dd9275dcef4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- i= p s= \n",
+      "-- i= e s= p\n",
+      "-- i= r s= pe\n",
+      "-- i= e s= peR\n",
+      "-- i= g s= peRe\n",
+      "-- i= r s= peReg\n",
+      "-- i= i s= peRegR\n",
+      "-- i= n s= peRegRi\n",
+      "-- i= e s= peRegRin\n",
+      "peRegRine\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = \"peregrine\"\n",
+    "\n",
+    "# sub_str = \"rg\" # This works too\n",
+    "sub_str = ['r']\n",
+    "\n",
+    "s = \"\"\n",
+    "for i in sentence:\n",
+    "    print(\"-- i=\",i,\"s=\",s)\n",
+    "    if i in sub_str:\n",
+    "        i = i.upper()\n",
+    "    s = s + i\n",
+    "    \n",
+    "    \n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa3aca32-5e59-47d4-896f-aa0dd9516061",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -527,12 +707,17 @@
     "id": "65b76c2c"
    },
    "source": [
-    "# 10) Return a string by appending s2 in middle of s1"
+    "## 10) Insert a string s2 in middle of s1\n",
+    "- s1 = \"****\"\n",
+    "- s2 = \"Happy\"\n",
+    "```\n",
+    "output: **Happy**\n",
+    "```\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "ea9cff41",
    "metadata": {
     "id": "ea9cff41",
@@ -540,46 +725,38 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "**Happy**\n",
+      "#################################\n",
+      "**Happy**\n"
+     ]
     }
    ],
    "source": [
-    "s1=\"********\"\n",
-    "s2=\"Facebook\"\n",
-    "s3=len(s1)//2\n",
-    "s3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "587efe4e",
-   "metadata": {
-    "id": "587efe4e",
-    "outputId": "2cd69bbc-14e7-46c4-c825-31ae21e004d8"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'****Facebook****'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s4=s1[0:4]+s2+s1[4:]\n",
-    "s4"
+    "s1 = \"****\" # \"*****\"\n",
+    "s2 = \"Happy\"\n",
+    "\n",
+    "l = int(len(s1)/2)\n",
+    "print(l)\n",
+    "\n",
+    "# STEP1: lets deal with case with even number of *\n",
+    "s = s1[0:l] + s2 + s1[l:]\n",
+    "print(s)\n",
+    "print(\"#################################\")\n",
+    "\n",
+    "s1 = \"*****\" \n",
+    "s2 = \"Happy\"\n",
+    "\n",
+    "# STEP2: Now we deal with both even and odd number of *\n",
+    "if len(s1) % 2 != 0:\n",
+    "    s = s1[0:l] + s2 + s1[l+1:]\n",
+    "else:\n",
+    "    s = s1[0:l] + s2 + s1[l:]\n",
+    "\n",
+    "print(s)"
    ]
   },
   {
@@ -1005,7 +1182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
