--- a/tut_py_2_type_part1_1_string.ipynb
+++ b/tut_py_2_type_part1_1_string.ipynb
@@ -55,6 +55,7 @@
    "source": [
     "# String declaration\n",
     "s = \"Python is easy to learn\" # or 'Python', str('Python'), str(90)\n",
+    "# print(type(s))\n",
     "\n",
     "# # Accessing elements: Indexing starts with 0 in python\n",
     "# print(s[0])   # 'P' (character at idx=0)\n",
@@ -65,10 +66,10 @@
     "\n",
     "# # Slicing : [start_position: end_position: step_size]. \n",
     "# # start_position by default is 0, end_position by default is last idx, step_size by default is 1\n",
-    "print(s[1:7:1]) # 'ython '\n",
+    "# print(s[1:7:1]) # 'ython '\n",
     "# print(s[1:7:2]) # 'yhn' (From index 1 to 6 with  step size 2) \n",
     "# print(s[1:4])  # 'yth' (From index 1 to 3)\n",
-    "# print(s[1:13:3]) # 'yoie' (From index 1 to 4 to 7 to 11 with  step size 1) \n",
+    "# print(s[2:13:3]) # 'tnsa' (From index 2 to 12 with step size 3) \n",
     "\n",
     "# print(s[:11])   # 'Python is e' (First 11 characters)\n",
     "# print(s[8:])   # 's easy to learn' (From index 8 to end)\n",
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "bd7156b7-5bc0-4353-935f-6668d6b8bf23",
    "metadata": {},
    "outputs": [
@@ -135,6 +136,7 @@
       "  mython is CoOL language \n",
       "2\n",
       "3\n",
+      "9\n",
       "python is CoOL language \n",
       "  python is CoOL language\n",
       "python is CoOL language\n",
@@ -148,17 +150,18 @@
    "source": [
     "# Lets explore some String methods\n",
     "s = \"  python is CoOL language \" \n",
-    "print(len(s))\n",
-    "print(s.lower())  \n",
-    "print(s.upper())  \n",
-    "print(s.replace(\"py\", \"my\"))  \n",
-    "print(s.count('o'))\n",
-    "print(s.lower().count('o')) # this is called chaining method. It counts all o regardless of upper/lower case.\n",
+    "# print(len(s))\n",
+    "# print(s.lower())  \n",
+    "# print(s.upper())  \n",
+    "# print(s.replace(\"py\", \"my\"))  \n",
+    "# print(s.count('o'))\n",
+    "# print(s.lower().count('o')) # this is called chaining method. It counts all o regardless of upper/lower case.\n",
+    "# print(s.find(\"is\")) # index of 'is' : 9\n",
     "\n",
-    "\n",
-    "print(s.lstrip()) # Removes empty spaces from left\n",
-    "print(s.rstrip()) # Removes empty spaces from right\n",
-    "print(s.strip()) #Removes all empty spaces from left and right\n",
+    "# print(s.lstrip()) # Removes empty spaces from left\n",
+    "# print(s.rstrip()) # Removes empty spaces from right\n",
+    "# print(s.strip()) #Removes all empty spaces from left and right\n",
+    "# print(s.lower())  \n",
     "\n",
     "s = \"python is CoOL language. hope you have fun.\"\n",
     "print(s.capitalize())\n",
@@ -188,9 +191,9 @@
     "# STEP1: split based on ,\n",
     "msg = \"2025-08-23,ash,34,000,34.78\"\n",
     "lst = msg.split(\",\")\n",
-    "print(lst) # ['today', ' is a good day', ' to learn something new.']\n",
+    "print(lst) # ['2025-08-23', 'ash', '34', '000', '34.78']\n",
     "\n",
-    "###################\n",
+    "\n",
     "#STEP2: split based on ;\n",
     "msg = \"2025-08-23;ash;34,000;34.78\"\n",
     "lst = msg.split(\";\")\n",
@@ -217,8 +220,8 @@
    ],
    "source": [
     "# You cannot add numeric types to string\n",
-    "a = \"7\"\n",
-    "b = 5\n",
+    "a = \"7\" # str\n",
+    "b = 5   # int\n",
     "res = a + b # ERROR\n",
     "print(res)"
    ]
@@ -265,10 +268,10 @@
     }
    ],
    "source": [
-    "# string  is immutable\n",
+    "# string  is immutable, but list is mutable\n",
     "s = 'Republic'\n",
     "s[0] = 'Z'\n",
-    "s # We get a error"
+    "print(s) # We get a error"
    ]
   },
   {
