--- a/tut_py_2_type_part1_2_list.ipynb
+++ b/tut_py_2_type_part1_2_list.ipynb
@@ -58,7 +58,7 @@
     "l = [] # empty list\n",
     "print(l)\n",
     "\n",
-    "l = [\"apple\", \"banana\",\"cucumber\"] # list contains elements that are all strings\n",
+    "l = [\"apple\", \"banana\", \"cucumber\"] # list contains elements that are all strings\n",
     "print(l)\n",
     "\n",
     "l = [True, True, False] # all elements are Boolean \n",
@@ -140,7 +140,7 @@
     }
    ],
    "source": [
-    "# List modification\n",
+    "# List modification:\n",
     "\n",
     "# appended at the end\n",
     "numbers = [10, 20, 30, 40, 50]\n",
@@ -187,15 +187,15 @@
     }
    ],
    "source": [
-    "# difference between  append and extend\n",
-    "fruits = ['apple', 'banana']\n",
+    "# difference between append and extend\n",
+    "fruits     = ['apple', 'banana']\n",
     "fruits_new = ['cherry', 'date']\n",
     "fruits.append(fruits_new)\n",
     "print(fruits)\n",
     "print(len(fruits))\n",
     "print(\"##################\")\n",
     "\n",
-    "fruits = ['apple', 'banana']\n",
+    "fruits     = ['apple', 'banana']\n",
     "fruits_new = ['cherry', 'date']\n",
     "fruits.extend(fruits_new) # extend unpacks the list\n",
     "print(fruits)\n",
@@ -222,6 +222,7 @@
     "# Sorting\n",
     "numbers.sort()\n",
     "print(f\"After sort: {numbers}\")  \n",
+    "print(\"########################\")\n",
     "\n",
     "numbers = [-6, 10, 20, 30, 25, 40, 17]\n",
     "# Reversing\n",
@@ -395,7 +396,7 @@
     "print(sorted(numbers)) # NOTE: it would not work if list contains int, str, bool mixed type\n",
     "\n",
     "# a simple application:\n",
-    "average = sum(numbers)/len(numbers)\n",
+    "average = sum(numbers) / len(numbers)\n",
     "print(average)"
    ]
   },
