--- a/tut_py_2_type_part1_3_tuple.ipynb
+++ b/tut_py_2_type_part1_3_tuple.ipynb
@@ -107,7 +107,7 @@
     "t = ('Jessa', 30, 45.75, [25, 78])\n",
     "print(t)\n",
     "\n",
-    "t = ((1,2,7.3), \"ash\",1234,54,12000)\n",
+    "t = ((1,2,7.3), \"ash\", 1234, 54, 12000)\n",
     "print(t)"
    ]
   },
@@ -193,7 +193,8 @@
     "print(planets)\n",
     "\n",
     "planets = (\"venus\", \"uranus\", \"earth\")\n",
-    "planets[1] = \"jupyter\" # tuple are immutable"
+    "planets[1] = \"jupyter\" # tuple are immutable\n",
+    "print(planets)"
    ]
   },
   {
