--- a/tut_py_2_type_part2_conditional_ifelse.ipynb
+++ b/tut_py_2_type_part2_conditional_ifelse.ipynb
@@ -10,13 +10,13 @@
     "\n",
     "```\n",
     "if  [boolean_expression1]:\n",
-    "    statements1\n",
+    "    # block of code\n",
     "elif [boolean_expression2]:\n",
-    "    statements2\n",
+    "    # block of code\n",
     "elif [boolean_expression3]:\n",
-    "    statements3\n",
+    "    # block of code\n",
     "else\n",
-    "    statements4\n",
+    "    # block of code\n",
     "```     \n",
     "\n"
    ]
@@ -105,8 +105,8 @@
    "source": [
     "# Example: User enters a number and program display message if number is even or odd\n",
     "\n",
-    "num = input(\"Enter number:\")\n",
-    "num = int(num)\n",
+    "num = input(\"Enter number:\") # str\n",
+    "num = int(num) # type cast into int\n",
     "\n",
     "#OR USE\n",
     "# num = int(input(\"Enter number:\"))\n",
@@ -144,15 +144,14 @@
     "\n",
     "name = input(\"Enter your name: \")\n",
     "age  = input(\"Enter your age: \")\n",
-    "age = int(age)\n",
+    "age  = int(age)\n",
     "\n",
     "if age < 100:\n",
     "    print(f\"Hello {name}! You are younger than 100 year old man.\")\n",
     "elif age == 100:\n",
     "    print(f\"Wow {name}, you're already 100 years old this year!\")\n",
     "else:\n",
-    "    print(f\"Hey {name}, you are older than 100 years old man.\")\n",
-    "\n"
+    "    print(f\"Hey {name}, you are older than 100 years old man.\")"
    ]
   },
   {
@@ -632,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
